// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Button Button smoke-test 1`] = `
<kd-button kind="primary-app"
           type="button"
           size="medium"
           iconposition="right"
           description
           href
           name
           value
>
  Button Text
</kd-button>
<button class=" button kd-btn--primary-app kd-btn--medium kd-btn--icon-right "
        type="button"
        aria-label
        title
        name
        value
>
  <span>
    <slot>
    </slot>
    <slot name="icon">
    </slot>
  </span>
</button>
`;

exports[`Components/Button ButtonWithIcon smoke-test 1`] = `
<kd-button kind="primary-app"
           type="button"
           size="medium"
           iconposition="right"
           description
           href
           name
           value
>
  Button Text
  <kd-icon slot="icon">
  </kd-icon>
</kd-button>
<button class=" button kd-btn--primary-app kd-btn--medium kd-btn--icon-right "
        type="button"
        aria-label
        title
        name
        value
>
  <span>
    <slot>
    </slot>
    <slot name="icon">
    </slot>
  </span>
</button>
<svg focusable="false"
     preserveaspectratio="xMidYMid meet"
     xmlns="http://www.w3.org/2000/svg"
     fill="currentColor"
     aria-hidden="true"
     width="20"
     height="20"
     viewbox="0 0 32 32"
>
  <path d="M22 16L12 26 10.6 24.6 19.2 16 10.6 7.4 12 6z">
  </path>
</svg>
`;

exports[`Components/Button IconOnly smoke-test 1`] = `
<kd-button iconposition="center"
           kind="primary-app"
           type="button"
           size="medium"
           description="Button Description"
           href
           name
           value
>
  <kd-icon slot="icon">
  </kd-icon>
</kd-button>
<button class="button kd-btn--primary-app kd-btn--medium kd-btn--icon-center icon-only"
        type="button"
        aria-label="Button Description"
        title="Button Description"
        name
        value
>
  <span>
    <slot>
    </slot>
    <slot name="icon">
    </slot>
  </span>
</button>
<svg focusable="false"
     preserveaspectratio="xMidYMid meet"
     xmlns="http://www.w3.org/2000/svg"
     fill="currentColor"
     aria-hidden="true"
     width="20"
     height="20"
     viewbox="0 0 32 32"
>
  <path d="M22 16L12 26 10.6 24.6 19.2 16 10.6 7.4 12 6z">
  </path>
</svg>
`;
